Dramatic, medieval-inspired font

--- a/css/calendar.battle-of-the-ice.css
+++ b/css/calendar.battle-of-the-ice.css
@@ -49,9 +49,10 @@
 
 /* Base Styles */
 .battle-of-the-ice {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Cinzel', serif;
+    /* Dramatic, medieval-inspired font */
     color: var(--battle-of-the-ice-text);
-    line-height: 1.6;
+    line-height: 1.5;
     background-color: var(--battle-of-the-ice-bg);
 }
 
